[tool.poetry]
name = "jack-the-mico"
version = "0.1.0"
description = "Jack Wenyoung's github profile configurations"
authors = ["jackwenyoung <dlwxxxdlw@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
github-readme-terminal = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
